# stoch_mean_field

./: CMakeLists.txt  README.md  main.cpp
algorithms/: CMakeLists.txt  adaptleap.h  barssa.h  base.h  basemethod.h  blwleap.h  bswleap.h  bswleap1.h  btwleap.h  bwrssa.h  cme.h  dm.h  ileap.h  model.cpp  model.h  nbwleap.h  nrm.h  random_engine.h  rleap.h  rnrm.h  rssa.h  scaleleap.h  timer.h  tleap.h
models/: ARF.txt  FceRI.txt  GAL.txt  MAPK.txt  MAPK296.txt  MAPKtest.txt  MAPKx0.01.txt  MAPKx0.1.txt  MAPKx10.txt  MAPKx100.txt  MAPKx1000.txt  MAPKx20.txt  MAPKx30.txt  MAPKx40.txt  MAPKx60.txt  MAPKx80.txt  abc_cycle.txt  birth_death.txt  birth_death_10000.txt  dimer.txt  enzymetic_futile_cycle.txt  gene_expression.txt  isomerization.txt  lotka.txt  schlogl.txt  sequence.txt  stiffdimer.txt  yeast_polarization.txt
python/: figure_plots.ipynb
python/.ipynb_checkpoints/: approximate_leap_weight-checkpoint.ipynb  benchmark-checkpoint.ipynb  critical_point_low_high_bounds-checkpoint.ipynb  histogram_plot-checkpoint.ipynb  mean_field-checkpoint.ipynb  poisson_dist_bounds-checkpoint.ipynb  random_shuffle_of_events-checkpoint.ipynb  trajectory_plot-checkpoint.ipynb  weight_distribution-checkpoint.ipynb
